[fix] Fixed Collapse overflow clip issue.

--- a/packages/common-theme/Collapse.scss
+++ b/packages/common-theme/Collapse.scss
@@ -16,6 +16,8 @@
         overflow: visible;
 
         .collapse-description-container {
+            overflow: visible;
+            
             .collapse-description-box {
                 overflow: visible;
             }
